# finselor

./: .gitignore  LICENSE  LICENSE.md  PRD.md  README.md  docker-compose.yml  pyrightconfig.json
backend/: .dockerignore  .env  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  seed.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  ai_advisor.py  auth.py  categories.py  dashboard.py  export.py  savings.py  transactions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  ai_log.py  category.py  savings_goal.py  transaction.py  user.py
backend/app/schemas/: ai_advisor.py  category.py  dashboard.py  savings_goal.py  transaction.py  user.py
backend/app/services/: ai_service.py  export_service.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/advisor/: page.tsx
frontend/app/dashboard/export/: page.tsx
frontend/app/dashboard/savings/: page.tsx
frontend/app/dashboard/transactions/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/lib/: api.ts  auth.tsx  utils.ts
