[project]
name = "finselor"
version = "0.1.0"
description = ""
authors = [
    {name = "yupx20",email = "muhammad.rizal.yudianto-2021@fst.unair.ac.id"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
